Add `--add-open` for tests on Java 16+